--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "md5": "^2.2.1",
     "sqlite-to-csv": "^2.0.0",
     "sqlite3": "^4.1.1"
+  },
+  "devDependencies": {
+    "csv-stringify": "^5.5.0"
   }
 }
